Clean pom.xml: cleaned the plugin part. Build sucessfully. All tests passed.